adding playlist related endpoints
