# zema_store_backend/src/models/mongoose/follower.ts
@@ -3,18 +3,23 @@ import mongoose, { Schema, Document } from "mongoose";
 export interface IFollowerDocument extends Document {
   artistId: mongoose.Schema.Types.ObjectId;
   customerId: mongoose.Schema.Types.ObjectId;
+  createdAt: Date;
+  updatedAt: Date;
 }
 
-const followerSchema: Schema<IFollowerDocument> = new Schema({
-  artistId: {
-    type: mongoose.Schema.Types.ObjectId,
-    required: true,
+const followerSchema: Schema<IFollowerDocument> = new Schema(
+  {
+    artistId: {
+      type: mongoose.Schema.Types.ObjectId,
+      required: true,
+    },
+    customerId: {
+      type: mongoose.Schema.Types.ObjectId,
+      required: true,
+    },
   },
-  customerId: {
-    type: mongoose.Schema.Types.ObjectId,
-    required: true,
-  },
-});
+  { timestamps: true }
+);
 
 const Follower = mongoose.model<IFollowerDocument>("Follower", followerSchema);
 
