# zema_store_backend/src/models/mongoose/song.ts
@@ -3,7 +3,7 @@ import mongoose, { Schema, Document } from "mongoose";
 enum MusicGenre {
   REGGAE = "reggae",
   POP = "pop",
-  ROCK = "rock"
+  ROCK = "rock",
 }
 
 export interface ISongDocument extends Document {
@@ -15,45 +15,50 @@ export interface ISongDocument extends Document {
   listenersCount: Number;
   length: String;
   releaseDate: Date;
+  createdAt: Date;
+  updatedAt: Date;
 }
 
-const songSchema: Schema<ISongDocument> = new Schema({
-  albumId: {
-    type: mongoose.Schema.Types.ObjectId,
-    required: true,
-    ref: "Album",
+const songSchema: Schema<ISongDocument> = new Schema(
+  {
+    albumId: {
+      type: mongoose.Schema.Types.ObjectId,
+      required: true,
+      ref: "Album",
+    },
+    artistId: {
+      type: mongoose.Schema.Types.ObjectId,
+      required: true,
+      ref: "User",
+    },
+    title: {
+      type: String,
+      required: true,
+    },
+    song: {
+      type: String,
+      required: true,
+    },
+    genre: {
+      type: String,
+      enum: MusicGenre,
+    },
+    listenersCount: {
+      type: Number,
+      required: true,
+      default: 0,
+    },
+    length: {
+      type: String,
+      required: true,
+    },
+    releaseDate: {
+      type: Date,
+      required: true,
+    },
   },
-  artistId: {
-    type: mongoose.Schema.Types.ObjectId,
-    required: true,
-    ref: "User",
-  },
-  title: {
-    type: String,
-    required: true,
-  },
-  song: {
-    type: String,
-    required: true,
-  },
-  genre: {
-    type: String,
-    enum: MusicGenre,
-  },
-  listenersCount: {
-    type: Number,
-    required: true,
-    default: 0,
-  },
-  length: {
-    type: String,
-    required: true,
-  },
-  releaseDate: {
-    type: Date,
-    required: true,
-  },
-});
+  { timestamps: true }
+);
 
 const Song = mongoose.model<ISongDocument>("Song", songSchema);
 
