# zema_store_backend/src/routes/index.routes.ts
@@ -3,5 +3,13 @@ import songRouter from "./song.routes";
 import artistRouter from "./artist.routes";
 import userRouter from "./user.routes";
 import albumRouter from "./album.routes";
+import playlistRouter from "./playlist.routes";
 
-export { authRouter, songRouter, artistRouter, userRouter, albumRouter };
+export {
+  authRouter,
+  songRouter,
+  artistRouter,
+  userRouter,
+  albumRouter,
+  playlistRouter,
+};
